# notion-invoices

./: .dockerignore  .gitignore  Dockerfile  README.md  com.user.cloudflared.plist.template  com.user.notion-invoices.plist.template  deploy.sh  pyproject.toml  status.sh
app/: __init__.py  config.py  main.py
app/api/: __init__.py  router.py  webhooks.py
app/models/: __init__.py  customer.py  invoice.py
app/services/: __init__.py  notion_service.py  stripe_service.py  sync_service.py
app/utils/: inspect_database.py  test_connection.py  test_sync.py
