[project]
name = "notion-invoices"
version = "0.1.0"
description = "Two-way sync between Stripe invoices and Notion database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stripe>=7.0.0",
    "notion-client>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.0",
    "ruff>=0.11.2",
    "logfire[fastapi]>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0"
]
